method for loading posts from a wall
