# routers/PostRouter.js
@@ -6,5 +6,10 @@ const authMiddleware = require('./../middleware/AuthMiddleware.js');
 const postRouter = new Router();
 
 postRouter.post('/wall-post', [authMiddleware], PostController.addPost);
+postRouter.get(
+  '/wall-post/:wall_id',
+  [authMiddleware],
+  PostController.getWallPosts
+);
 
 module.exports = postRouter;
